--- a/TareaUno/index.html
+++ b/TareaUno/index.html
@@ -1,79 +1,64 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<meta charset="utf-8">
-		<title>Tarea Uno</title>
-		<style type="text/css">
-		
-		body{
-			background-color: #333;
-			color: #FFF;
-			text-align: center;
-		}
-		nav ul li{
-			table-layout: 90px;
-			list-style: none;
-			display: inline-block;
-			margin-right: 90px;
-			cursor: pointer;
-		}
-		#centro{
-			text-align: center;
-			background-color: #333;
-		}
-		header{
-			width: 960px;
-			margin: 0 auto;
-		}
-		#text{
-			width: 600px;
-			height: 300px;
-			background-color: #333;
-			color: #FFF;
-			margin: 0 auto;			
-		}
-		aside{
-			margin-left: 600px;
-			width: 300px;
-
-		}
-		</style>	
+		<meta charset="utf-8">     
+		<style>
+			nav ul li{
+			list-style-type:none;
+			}
+		</style>
 	</head>
-	<body>
-		<div>
-		<header> <!--se utiliza para el encabezado de la pagina-->
-			<hgroup> <!-- se utiliza para agrupar las etiquetas h -->
-			<h1>Tarea Uno </h1>
-			<h2>Investigación de HTML5</h2>
+	<body align="center">        
+		<header>
+			<hgroup>
+				<h1>Tarea Uno</h1>
+				<h3> HTML5</h3>
 			</hgroup>
-			</header>	
-			<nav> <!-- Define los botones de navegacion de nuestra pagina-->
-			<ul><!--Para declarar una lista en la pagina-->
-				<li><!-- es un elemento de la lista  en ul -->
-					<a href="">Inicio</a> <!-- se declara para usar una referencia un link-->
+		</header>
+		<nav>
+			<ul>
+				<li list-style-type:none>
+					<a href="http://www.w3schools.com/tags/">w3schools</a>
 				</li>
 				<li>
-					<a href="">Musica</a>
+					<a href="http://www.w3.org/">w3c</a>
 				</li>
-				<li>
-					<a href="">Video</a>
-				</li>				
 			</ul>
-			</nav>	
-		<section id="text">
-			<div>
-				<article><!-- se puede decir que es la zona principal para declar texto o elementos -->
-					Aqui podria ir el texto del articulo si hablamos de n blog
-				</article>
-				<aside> 
-				Aside que es utilizada para los Widgets y otros contenidos
-				</aside>
-			</div>
+		</nav>
+		<section>
+			<article>
+				<!-- se puede decir que es la zona principal para declar texto o elementos -->
+				<h1>HTML5</h1>
+				<p>HTML5 es la última actualización en el mercado del diseño web y desarrollo de software.                        
+					<wbr> También es el mejor sustituto de  flash mientras que proporciona compatibilidad con todo tipo de navegadores.</p>
+			</article>
+			<article>
+				<h1>Lista de algunas de las etiquetas de HTML utilizadas en el documento</h1>
+				<nav>                              
+					<p>!DOCTYPE</p>
+					<p>META</p>
+					<p>TITLE</p>
+					<p>HEAD</p>
+					<p>DIV</p>
+					<p>HGROUP</p>
+					<p>HEADER</p>
+					<p>NAV</p>
+					<p>SECTION</p>
+					<p>ARTICLE</p>
+					<p>ASIDE</p>
+					<p>FOOTER</p>                	                                        
+				</nav>
+			</article>
 		</section>
-		
-		<footer>
-			<p>El pie de pagina</p>
-		</footer>
-		</div>
+		<aside> 
+			<p><img src="http://img3.wikia.nocookie.net/__cb20130923190817/leagueoflegends/es/images/d/d0/Facebook_1.png" height="24px"> Siguenos en facebook como <a href="https://www.facebook.com/freivin.campbell.9">Freivin Campbell</a></p>
+		</aside>      
 	</body>
+	<footer>
+		<p>Posted by: Freivin Campbell</p>
+		<p>Contact information: 
+			<a href="mailto:freivin12@gmail.com">
+				freivin12@gmail.com</a>
+		</p>
+	</footer>
 </html>
