creando la tarea 2

--- a/TareaUno/index.html
+++ b/TareaUno/index.html
@@ -16,12 +16,14 @@
 			</hgroup>
 		</header>
 		<nav>
+		    
 			<ul>
 				<li list-style-type:none>
 					<a href="http://www.w3schools.com/tags/">w3schools</a>
 				</li>
 				<li>
 					<a href="http://www.w3.org/">w3c</a>
+					
 				</li>
 			</ul>
 		</nav>
@@ -51,7 +53,8 @@
 			</article>
 		</section>
 		<aside> 
-			<p><img src="http://img3.wikia.nocookie.net/__cb20130923190817/leagueoflegends/es/images/d/d0/Facebook_1.png" height="24px"> Siguenos en facebook como <a href="https://www.facebook.com/freivin.campbell.9">Freivin Campbell</a></p>
+			<p><img src="http://img3.wikia.nocookie.net/__cb20130923190817/leagueoflegends/es/images/d/d0/Facebook_1.png" 
+			height="24px"> Siguenos en facebook como <a href="https://www.facebook.com/freivin.campbell.9">Freivin Campbell</a></p>
 		</aside>      
 	</body>
 	<footer>
