subi la pagina final al hosting

--- a/TareaDos/index.html
+++ b/TareaDos/index.html
@@ -11,16 +11,16 @@
 	<title>BlackCode</title>
 </head>
 <body>
-	<div class="col-md-3 center-block quitar-float text-center espacio-arriba">
+	<div class="col-md-3 center-block quitar-float text-center espacio-arriba espacio-abajo">
 		<img src="imgs/code.png" class="animated fadeIn">
 		<h1 class="pacifico grande verde animated fadeIn retraso-1 ">BLACK        CODE</h1>
 		
 		<div class="animated fadeInDown retraso-2">
 			<h2>El lugar donde tú y yo amamos el Código</h2>
 			<nav>
-				<a href="menu.html" class="espacio-derecha">Entrada</a>
-				<a href="menu.html" class="espacio-derecha">Mi Perfil</a>					
-				<a href="menu.html" class="espacio-derecha">Registrate</a>					
+				<a href="tutoriales.html" class="espacio-derecha">Turoriales</a>
+				<a href="contacto.html" class="espacio-derecha">Mi Perfil</a>					
+				<a href="" class="espacio-derecha">Registrate</a>					
 			</nav>
 		</div>
 	</div>
