--- a/TareaDos/contacto.html
+++ b/TareaDos/contacto.html
@@ -12,33 +12,85 @@
 				<a href="index.html" class="verde">Black Code</a>
 			</li>
 			<li class="col-md-3 inline-block">
-				<a href="contacto.html">Contacto</a>
+				<a href="contacto.html">Mi Perfil</a>
 			</li>
 			<li class="col-md-3 inline-block">
-				<a href="menu.html">Menú</a>
+				<a href="tutoriales.html">Tutoriales</a>
 			</li>
 		</ul>
 	</nav>
 	<section>
-		<ul class="nav nav-tabs">
-			<li role="presentation" class="active">
-				<a href="index.html">Home</a>
-			</li>
-			<li role="presentation">
-				<a href="#">Profile</a>
-			</li>
-			<li role="presentation">
-				<a href="#">Messages</a>
-			</li>
-		</ul>
 		<div class="mediano text-center">
-			<h1 class="pacifico grande azul">Contacto</h1>
-			<p>iglesia genesis aguas zarcas</p>
-			<p>Esbribenos a
-				<a href="mailto: freivin12@gmail.com">freivin12@gmail.com</a>
-			</p>
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3924.5964238034067!2d-84.348782!3d10.374118!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0635be246e607%3A0xf50e73fc04931d34!2sCongregaci%C3%B3n+Cristiana+G%C3%A9nesis+de+Costa+Rica!5e0!3m2!1ses-419!2scr!4v1430961834437"
-			width="600" height="450" frameborder="0" style="border:0"></iframe>
+			<h1 class="pacifico grande azul">Curriculum Vitae</h1>
+			<section>
+				<article class="nombre col-md-3 ">
+					<hgroup>
+						<h3>Freivin Josúe Campbell Rojas</h3>
+					</hgroup>
+					<img src="imgs/perfil.png" id="perfil"></img>
+					<h3>Est: Ingeniero en Software</h3>
+				</article>
+				<article class="informacionPersonal col-md-5">
+					<h4>
+						<strong>Información personal</strong>
+					</h4>
+					<p>• Estado civil: Soltero.
+						<wbr></wbr>
+					</p>
+					<p>• Cédula: 7-220-755.
+						<wbr></wbr>
+					</p>
+					<p>• Fecha de nacimiento: 03 de Julio de 1993.
+						<wbr></wbr>
+					</p>
+					<p>• Nacionalidad: Costarricense.
+						<wbr></wbr>
+					</p>
+					<p>• Edad: 21 años.
+						<wbr></wbr>
+					</p>
+					<p>• Teléfono: 8413-2198.
+						<wbr></wbr>
+					</p>
+					<p>• Dirección electrónica: <a href="mailto: freivin12@gmail.com"> freivin12@gmail.com.</a>
+						<wbr></wbr>
+					</p>
+					<p>• Dirección de residencia: 150 metros Sur de la entrada Calle Génesis en Aguas Zarcas.
+						<wbr></wbr>
+					</p>
+					<h4>
+						<strong>Educación</strong>
+					</h4>
+					<p>• Año 2005 Aprobación de los estudios Escuela San José de Aguas Zarcas.
+						<wbr></wbr>
+					</p>
+					<p>• Año 2009 Conclusión de los Estudios Educación General Básica Colegio Técnico Profesional Nataniel Arias Murillo A.Z.
+						<wbr></wbr>
+					</p>
+					<p>• Año 2011 Bachiller en Educación Media Liceo Gastón Peralta Carranza.
+						<wbr></wbr>
+					</p>
+					<p>• Año 2012 Aprobación del título Manipulación de alimentos.
+						<wbr></wbr>
+					</p>
+					<p>• Año 2012 Aprobación del título Introducción a la Computación.
+						<wbr></wbr>
+					</p>
+					<p>• Año 2012 Aprobación del título Manejo de aplicaciones Office.
+						<wbr></wbr>
+					</p>
+					<p>• Año 2014 Aprobación del título Contabilidad Básica.
+						<wbr></wbr>
+					</p>
+					<p>• Año 2014 Aprobación del título Servicio al Cliente.
+						<wbr></wbr>
+					</p>
+					<p>• Año 2014 Aprobación del título Mercadeo.
+						<wbr></wbr>
+					</p>
+				</article>
+				
+			</section>
 		</div>
 	</section>
 </body>
