--- a/TareaDos/tutoriales.html
+++ b/TareaDos/tutoriales.html
@@ -9,8 +9,8 @@
 	<nav class=" se-gris padding-largo text-center">
 		<ul class="no-lista">
 			<li class="col-md-3 inline-block pacifico"><a href="index.html" class="verde">Black Code</a></li>
-			<li class="col-md-3 inline-block"><a href="contacto.html">Contacto</a></li>
-			<li class="col-md-3 inline-block"><a href="menu.html">Menú</a></li>		
+			<li class="col-md-3 inline-block"><a href="contacto.html">Mi Perfil</a></li>
+			<li class="col-md-3 inline-block"><a href="tutoriales.html">Tutoriales</a></li>		
 		</ul>
 	</nav>
 	<section>
