--- a/PracticaUno/index.html
+++ b/PracticaUno/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body align="center">
 		<header>
-			<hgroup class"jdsjsf>
+			<hgroup>
 				<h1>Tarea Uno</h1>
 				
 				<h3>HTML5</h3>
@@ -35,19 +35,24 @@
 			</article>
 			<article>
 				<h1>Lista de algunas de las etiquetas de HTML utilizadas en el documento</h1>
-				<nav quitarfloat >
+				<nav>
 					<p>!DOCTYPE</p>
 					<p>META</p>
 					<p>TITLE</p>
 					<p>HEAD</p>
 					<p>DIV</p>
 					<p>HGROUP</p>
-					<p>HEADER</p>
+					<mark><p>HEADER</p></mark>
 					<p>NAV</p>
 					<p>SECTION</p>
-					<p>ARTICLE</p>
+					<b><p>ARTICLE</p></b>
 					<p>ASIDE</p>
 					<p>FOOTER</p>
+					
+					<h3>Aqui mostraremos un video de como usar un tag de HTMl</h3>
+					<video width="330" height="240"controls="controls">
+						<source src="video.mp4" type="video/mp4"/>
+					</video>
 				</nav>
 			</article>
 		</section>
@@ -58,7 +63,7 @@
 			</p>
 		</aside>
 	</body>
-	<footer azul>
+	<footer>
 		<p>Posted by: Freivin Campbell</p>
 		<p>Contact information:
 			<a href="mailto:freivin12@gmail.com">
