--- a/TareaDos/index.html
+++ b/TareaDos/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
 <head>
 	<meta charset="utf-8">
+		<meta name="google-site-verification" content="aYH_obMXVoUUYGVGNcmGUQ3ulwQ4C9fR3YOf03q5uwE" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
@@ -10,20 +11,21 @@
 	<link rel="stylesheet"  href="css/animate.css">
 	<title>BlackCode</title>
 </head>
+asas
 <body>
 	<div class="col-md-3 center-block quitar-float text-center espacio-arriba espacio-abajo">
 		<img src="imgs/code.png" class="animated fadeIn">
 		<h1 class="pacifico grande verde animated fadeIn retraso-1 ">BLACK        CODE</h1>
-		
+
 		<div class="animated fadeInDown retraso-2">
 			<h2>El lugar donde tú y yo amamos el Código</h2>
 			<nav>
-				<a href="tutoriales.html" class="espacio-derecha">Turoriales</a>
-				<a href="contacto.html" class="espacio-derecha">Mi Perfil</a>					
-				<a href="" class="espacio-derecha">Registrate</a>					
+				<!--<a href="tutoriales.html" class="espacio-derecha">Turoriales</a>    -->
+				<a href="contacto.html" class="espacio-derecha">Mi Perfil</a>
+				<!--<a href="" class="espacio-derecha">Registrate</a>	-->
 			</nav>
 		</div>
 	</div>
-	
+	<<div class></div>
 </body>
 </html>
