modificaciones en el log in

--- a/ProyectoUno/proyecto/index.html
+++ b/ProyectoUno/proyecto/index.html
@@ -6,17 +6,26 @@
 		<title>ProyectoUno</title>
 	</head>
 	<body>
-		<div>
-			<form>
-				<fieldset>
-					<legend>Login</legend>
-					<br/>Name
-					<input type="Text" name="name">
-					<br/>password
-					<input type="password" name="pass">
-				</fieldset>
-			</form>
-		</div>
+		<form>
+			<p>
+				<label>Email or Username
+					<br />
+					<input id="campo" type="text" size="25" />
+				</label>
+			</p>
+			<p>
+				<label>Password
+					<br />
+					<input id="campo" type="password" size="25" />
+				</label>
+			</p>
+			<p>
+				<input id="boton" type="submit"></input>
+			</p>
+		</form>
 	</body>
+	
+	<form></form>
 
 </html>
+<!-- kquiros@wearegap.com-->
